force-app/main/default/objects/COM_OrganizationInfo__c/COM_OrganizationInfo__c.object-meta.xml
<CustomObject>
    <description>LK 조직정보 관리
Lv. 1 : 국가
Lv. 2 : C-Level
Lv. 3 : 사업부
Lv. 4 : 그룹
Lv. 5 : 팀(Name)</description>
    <label>Organization Info</label>
    <nameField>
        <label>Org Lv. 5</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organization Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>