force-app/main/default/objects/COM_OrganizationInfo__c/fields/OrgLv1__c.field-meta.xml
<CustomField>
    <fullName>OrgLv1__c</fullName>
    <label>Org Lv. 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_OrgLv1</valueSetName>
    </valueSet>
</CustomField>