force-app/main/default/objects/COM_OrganizationInfo__c/fields/OrgLv2__c.field-meta.xml
<CustomField>
    <fullName>OrgLv2__c</fullName>
    <label>Org Lv. 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_OrgLv2</valueSetName>
    </valueSet>
</CustomField>