force-app/main/default/objects/COM_OrganizationInfo__c/fields/OrgLv3__c.field-meta.xml
<CustomField>
    <fullName>OrgLv3__c</fullName>
    <label>Org Lv. 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_OrgLv3</valueSetName>
    </valueSet>
</CustomField>