force-app/main/default/objects/COM_OrganizationInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OrgLv1__c</columns>
    <columns>OrgLv2__c</columns>
    <columns>OrgLv3__c</columns>
    <columns>OrgLv4__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>